<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CampusIN</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    	<string name="app_id">635010643194002</string>
    <string name="login_with_facebook_to_enjoy_the_full_functionality_of_campusin">Login with Facebook to enjoy the full functionality of CampusIN</string>
    <string name="Trend_prompt">Choose your trend</string>
    <string name="Year_prompt">Choose your year</string>
        <string-array name="Trend">
        <item>הנדסת תוכנה</item>
        <item>הנדסת אלקטרוניקה</item>
        <item>הנדסת פלסטיקה</item>
        <item>הנדסת כימית</item>
        <item>הנדסת תעשיה וניהול</item>
        <item>עיצוב אופנה</item>
        <item>עיצוב תעשייתי</item>
        <item>עיצוב תכשיטים</item>
        <item>עיצוב פנים</item>
        <item>אמנות</item>
        <item>עיצוב טקסטיל</item>
        <item>תקשורת חזותית</item>
    </string-array>
    <string-array name="Year">
        <item>ראשונה</item>
        <item>שניה</item>
        <item>שלישית</item>
        <item>רביעית</item>
    </string-array>
        <string name="display_me">display_me</string>
        <string name="show_hidw_mee">הצג/הסתר אותי</string>
        <string name="show_hide_me_title">הצג אותי</string>
            <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
	<string name="do_somthing">Jacob :)</string>
	<string name="event_type_prompt">בחר סוג אירוע</string>
	 
	 <string-array name="event_types_array">
        <item>בחינה</item>
        <item>שיעור</item>
        <item>פגישה</item>
    </string-array>
        <string name="add_event_title">הוסף אירוע</string>
        <string name="add_event_positiv_button">הוסף אירוע</string>
        <string name="cancel">בטל</string>
        <string name="add_friends">בחר חברים</string>
        <string name="add">"מוסיף "</string>
        <string name="remove">הסר</string>
        <string name="remove_friends">הסר חברים</string>
        <string name="my_event_list">רשימת האירועים שלי</string>
        <string name="close">סגור</string>
        <string name="success_adding_friends_to_event">חברים התווספו בהצלחה ויזומנו לאירוע</string>
        <string name="leave_massage_to_friends">השאר הודעה לחברים</string>
        <string name="send">שלח</string>
        <string name="no_friend_added">לא נבחרו חברים</string>
        <string name="empty_massage_error">לא ניתן לשלוח הודעה ריקה</string>
        <string name="empty_massage">לא ניתן לשלוח הודעה ריקה</string>
        <string name="edit_friends">ערוך רשימת חברים</string>
        <string name="friend_list">רשימת חברים</string>
        <string name="friends_to_your_friend_liat">" חברים לרשימת החברים שלך"</string>
        <string name="my_friends">החברים שלי</string>
        <string name="my_messages">ההודעות שלי</string>
        <string name="come_closer_to_message">אינך נמצא קרוב מספיק להודעה</string>
        <string name="load">טוען</string>
        <string name="updating_your_location">מעדכן את מיקומך בענן...</string>
        <string name="which_trend">באיזו מגמה אתה לומד?</string>
        <string name="next_button">הבא</string>
        <string name="whih_year">באיזו שנה?</string>
        <string name="next_b">הבא</string>
        <string name="km">ק\'מ</string>
        <string name="no_internrt">אין אינטרנט</string>
        <string name="no_internet_content">האפליקציה דורשת חיבור לאינטרנט, לא ניתן להמשיך... בבקשה התחבר לאינטרנט</string>
</resources>