<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#b5e5fe"
    android:padding="20dp"
    android:orientation="vertical" >
    
     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/which_trend"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <Spinner
        android:id="@+id/spinner1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Trend"
        android:layout_marginTop="30dp"       
        android:spinnerMode="dialog"
        android:prompt="@string/Trend_prompt" 
        />
         <Button
         android:layout_width="106dp"
        android:id="@+id/btnNext1"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/next_button" />

         <ImageView
             android:id="@+id/imageView1"
             android:paddingTop="60dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/campus_in_ico" />

</LinearLayout>